...
 */
@Composable
internal fun EventLogDialog(state: GameState, onDismiss: () -> Unit) {
    val context = LocalContext.current
    ResponsiveAlertDialog(
        onDismissRequest = onDismiss,
        title = { Text("Event log") },
        text = {
            EventLogDialogContent(state = state)
        },
        dismissButton = {
            TextButton(
                label = "Share",
                tag = "event-log-share",
                onClick = {
                    context.shareEventLog(state)
                },
            )
        },
...
